# cotonou

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.debug.yml  docker-compose.yml
cotonou-auth/: Cargo.toml
cotonou-auth/src/: app_state.rs  authentication_service.rs  error.rs  health_check_service.rs  main.rs
cotonou-common/: Cargo.toml
cotonou-common/src/: lib.rs
cotonou-common/src/authentication/: jwt_auth_middleware.rs  jwt_claims.rs  mod.rs  user.rs
cotonou-common/src/dal/: game_server_dal.rs  generic_dal.rs  id_generator_dal.rs  master_entity.rs  matchmaking_average_waiting_time_dal.rs  matchmaking_session_dal.rs  matchmaking_settings_dal.rs  matchmaking_ticket_dal.rs  mod.rs  mongo_db_collection.rs
cotonou-common/src/database/: error.rs  generic_dal.rs  id_generator_dal.rs  master_entity.rs  mod.rs
cotonou-common/src/http/: error.rs  http_client.rs  mod.rs
cotonou-common/src/matchmaking/: error.rs  game_server.rs  game_server_dal.rs  matchmaking_activate_session_notification.rs  matchmaking_average_waiting_time_dal.rs  matchmaking_command.rs  matchmaking_command_dal.rs  matchmaking_completed_notification.rs  matchmaking_failed_notification.rs  matchmaking_servers_full_notification.rs  matchmaking_session.rs  matchmaking_session_dal.rs  matchmaking_settings.rs  matchmaking_settings_dal.rs  matchmaking_ticket.rs  matchmaking_ticket_dal.rs  mod.rs  redis_key_names.rs
cotonou-common/src/models/: game_region.rs  hosting_environment.rs  matchmaking_settings.rs  mod.rs  profile_id.rs  unique_id.rs
cotonou-common/src/mongo/: mod.rs  mongo_config.rs
cotonou-common/src/mongo_db/: mod.rs  mongo_db_config.rs
cotonou-common/src/notifications/: error.rs  mod.rs  notification.rs  notification_manager.rs
cotonou-common/src/online_config/: mod.rs  mongo_db_connection_string_provider.rs  online_config_manager.rs  service_online_config.rs
cotonou-common/src/profile/: account_entity.rs  account_manager.rs  core_profile_entity.rs  core_profile_manager.rs  error.rs  mod.rs  platform.rs  profile_entity.rs  profile_manager.rs
cotonou-common/src/redis/: error.rs  mod.rs  paired_connection_ext.rs  redis_config.rs  redis_connection_manager.rs
cotonou-common/src/steam/: error.rs  mod.rs  steam_id.rs  steam_micro_txn_client.rs  steam_response.rs  steam_user_auth_client.rs  steam_user_client.rs
cotonou-common/src/types/: game_server_id.rs  mod.rs
cotonou-matchmaking-job/: Cargo.toml
cotonou-matchmaking-job/src/: error.rs  first_come_first_served.rs  game_server_manager.rs  item_cache.rs  main.rs  matchmaker.rs  matchmaking_assembler.rs  matchmaking_dal.rs  matchmaking_job.rs  matchmaking_master_job.rs  matchmaking_waiting_time_cache.rs  notification_cache.rs  queue_map.rs  ranked_matchmaker.rs  util.rs
cotonou-matchmaking-job/src/game_server_provider/: auto_scaling_game_server_provider.rs  dynamic_host_provider.rs  idle_server_collection.rs  mod.rs  static_game_server_provider.rs
cotonou-matchmaking-job/src/match_functions/: fcfs_march_functions.rs  mmr_match_functions.rs  mod.rs
cotonou-matchmaking-job/src/matchmaker/: cut_lists_matchmaker.rs  matchmaker_context.rs  mod.rs  mt_cut_lists_matchmaker.rs  simple_list_matchmaker.rs
cotonou-matchmaking-service/: Cargo.toml
cotonou-matchmaking-service/src/: app_state.rs  error.rs  game_server_service.rs  main.rs  matchmaking_assembler.rs  matchmaking_service.rs  matchmaking_started_notification.rs  profile_for_matchmaking_entity.rs  profile_for_matchmaking_manager.rs
cotonou-notif/: Cargo.toml
cotonou-notif/src/: error.rs  main.rs  notification_service.rs
