[package]
name = "cotonou-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
authentication = ["dep:axum", "dep:jsonwebtoken"]
dal = ["dep:mongodb"]
matchmaking = ["redis"]
notifications = ["redis"]
profile = ["dal"]
redis = ["dep:rustis"]

[dependencies]
tokio = { version = "1.23", features = ["time"] }
axum = { version = "0.6", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = { version = "8", optional = true }
futures = "0"
rustis = { version = "0.11", optional = true }
mongodb = { version = "2", optional = true }
url = "2"
typetag = "0"
log = "0.4"
uuid = { version = "1.3", features = ["v4"] }
