[package]
name = "cotonou-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["authentication", "matchmaking"]
authentication = ["database", "profile", "dep:axum", "dep:jsonwebtoken"]
database = ["dep:mongodb"]
matchmaking = ["redis", "notifications"]
notifications = ["redis"]
profile = ["database"]
redis = ["dep:rustis"]

[dependencies]
tokio = { version = "1.23", features = ["time"] }
axum = { version = "0.6", optional = true }
hyper = { version = "0.14", features = ["tcp", "client"] }
hyper-tls = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
chrono = "0.4"
jsonwebtoken = { version = "8", optional = true }
futures = "0"
rustis = { version = "0.11", optional = true }
mongodb = { version = "2.6", optional = true }
bson = { version = "2.6", features = ["chrono-0_4"] }
url = "2.4"
typetag = "0.2"
log = "0.4"
uuid = { version = "1.3", features = ["v4"] }
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1.23", features = ["rt-multi-thread"] }
