[package]
name = "cotonou-matchmaking-job"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common_macros = "0"
futures-util = "0.3"
tokio = { version = "1.26", features = ["rt-multi-thread", "signal", "time", "sync"] }
log = "0.4"
env_logger = "0.10"
rand = "0.8"
cotonou-common = { path = "../cotonou-common", features = ["authentication", "notifications", "matchmaking", "dal"] }
