[package]
name = "cotonou-matchmaking-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common_macros = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.23", features = ["rt-multi-thread"] }
hyper = { version = "0.14" }
axum = { version = "0.6", features = ["macros"] }
typetag = "0"
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"
cotonou-common = { path = "../cotonou-common", default-features = false, features = [
    "authentication",
    "notifications",
    "matchmaking",
] }
