[package]
name = "cotonou-notif"
version = "0.1.0"
edition = "2021"

[dependencies]
common_macros = "0"
tokio = { version = "1.26", features = ["rt-multi-thread"] }
hyper = { version = "0.14" }
axum = { version = "0.6" }
thiserror = "1.0"
cotonou-common = { path = "../cotonou-common", default-features = false, features = [
    "authentication",
    "notifications",
] }
